--- a/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
@@ -23,6 +23,7 @@
     </div>
 
     <div class="panel-body">
+        <h3>Dit is nog in test en ook nog niet echt gekoppeld aan de alerts! </h3>
         <p><a href="~/Alert/L_controlLimits/Index" class="btn btn-primary btn-sm">controlLimits &raquo;</a>view control limits</p>
         <p><a href="~/Alert/L_variants/Index" class="btn btn-primary btn-sm">variants &raquo;</a>view variants</p>
     </div>
