--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -13,32 +13,32 @@
         <div class="panel-body">
             <p>
                 <a href="~/Tiplife/NgacElectrode/CurrentTipstatus" class="btn btn-primary btn-sm">Active tiplife &raquo;</a>
-                Huidige elektrode status inclusief een voorspelling van het aantal nog te lassen wagens
+                (Huidige elektrode status.)
             </p>
             <p>
-                <a href="~/Tiplife/NgacElectrode/TipwearBeforeChange" class="btn btn-primary btn-sm">Lijst met gewisselde elektrodes &raquo;</a>
-                Weergave van waar er elektrodes gewisseld zijn geweest.
+                <a href="~/Tiplife/NgacElectrode/TipwearBeforeChange" class="btn btn-primary btn-sm">Tipwear before change &raquo;</a>
+                (Weergave van giswisselde electrodes en hun wear.)
             </p>
             <p>
-                <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-ErrorType-Contains=Max%20wear%20reached&DataGrid-Rows=20" class="btn btn-warning btn-sm">Lijst met elektrodes die niet op tijd werden gewisseld &raquo;</a>
-                Weergave van waar er elektrodes niet op tijd gewisseld zijn. (robot zelf naar onderhoud gegaan)
+                <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-ErrorType-Contains=Max%20wear%20reached&DataGrid-Rows=20" class="btn btn-warning btn-sm">Max wear reached &raquo;</a>
+                (Robot is zelf naar onderhoud gegaan door max wear.)
             </p>
             <p>
-                <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alertType-Contains=Tiplife&h_alert-Rows=7" class="btn btn-warning btn-sm">Alerts&raquo;</a>
-                Tiplife alerts (no changed deteced)
+                <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alertType-Contains=Tiplife&h_alert-Rows=7" class="btn btn-warning btn-sm">Tiplife alerts&raquo;</a>
+                (No changed deteced op teachpannel.)
             </p>
             <p>
                 <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-controller_name-Contains=xxx&DataGrid-Rows=20" class="btn btn-primary btn-sm">TipDressData &raquo;</a>
-                Ruwe Tipdress data
+                (Data van elke bigdress.)
             </p>
             <p>
                 <a href="~/Tiplife/NgacElectrode/TipLifeExpectations" class="btn btn-primary btn-sm">TipLifeExpectations &raquo;</a>
-                Tabel met voorspelling hoeveel stukken kunnen gemaakt worden met een electrode
+                (Voorspelling hoeveel stukken kunnen gemaakt worden met een electrode.)
             </p>
 
             <p>
                 <a href="~/Tiplife/NgacElectrode/PlanTipChange" class="btn btn-primary btn-sm">Plan tipchange &raquo;</a>
-                Onderhoudplannen
+                (Onderhoudplannen)
             </p>
         </div>
     </div>
