--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
     </div>
     <div class="panel-body">
         <p>
-            <a href="~/PDFjs/web/viewer.html?file=Q-Mapping Dashboard.pdf" class="btn btn-primary btn-sm">Qurt &raquo;</a>
+            <a href="~/PDFjs/web/viewer.html?file=Q-Mapping Dashboard greenfield.pdf" class="btn btn-primary btn-sm">Qurt &raquo;</a>
             Q-Mapping Dashboard
         </p>
         <p>
