--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsToChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsToChange.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
-
+<div class="badge">Aantal:@Model.Count()</div>
 @Html.Grid(Model).Named("TipsToChangeTable").Build(columns =>
 {
     columns.Add(c => c.Robot).Titled("Robot");
