--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -31,6 +31,11 @@
                 layout data van STW040 en MAXIMO (ci) + Maximo tool
             </p>
 
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=AfstartT2&sheet=Afstart" class="btn btn-primary btn-sm">Afstart &raquo;</a>
+                layout data maximo met wekelijkse afstart.
+            </p>
+
         </div>
     </div>
     <p></p>
@@ -53,6 +58,16 @@
             <p>
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTree" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
                 Boommap met aantal storingen
+            </p>
+
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=MDTMWTMTTRlijn" class="btn btn-primary btn-sm">MDTMWTMTTRlijn &raquo;</a>
+                Opvolging MDT MWT MTTR per zone / ploeg / lijn
+            </p>
+
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=MDTMWTMTTRobject" class="btn btn-primary btn-sm">MDTMWTMTTRobject &raquo;</a>
+                Opvolging MDT MWT MTTR per zone / object
             </p>
 
         </div>
@@ -85,16 +100,23 @@
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=Weardress" class="btn btn-primary btn-sm">Wear/dress &raquo;</a>
+            Slijtage per dressbeurt per robot
         </p>
 
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=WeardressTrend" class="btn btn-primary btn-sm">Wear/dressTrend &raquo;</a>
+            Slijtage per dressbeurt per robot trent
         </p>
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=DressFaults" class="btn btn-primary btn-sm">Wear/dress &raquo;</a>
             Boommap met dressproblemen per fout type
+        </p>
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=Tipchanges" class="btn btn-primary btn-sm">Tipchanges/shift &raquo;</a>
+            Aantal tipchange per area per shift
         </p>
     </div>
 </div>
