--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
@@ -1,6 +1,5 @@
-﻿
-@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
-
+﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
+<div class="badge">Aantal:@Model.Count()</div>
 @Html.Grid(Model).Named("TipsChangedTable").Build(columns =>
 {
     columns.Add(c => c.Robot).Titled("Robot");
