--- a/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
@@ -9,7 +9,7 @@
 @if(@HttpContext.Current.Session["Impersonating"] != "")
 {
 <div class="label label-danger">
-    You are impersonating!
+    You are impersonating! user are:
     @HttpContext.Current.Session["Impersonating"]
 </div>
 }
