integration of ownship in user profiles

--- a/EqUiWebUi/Areas/user_management/Views/AreaFilters/Delete.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/AreaFilters/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model EqUiWebUi.Areas.user_management.Models.AreaFilters
+﻿@model EqUiWebUi.Areas.user_management.Models.c_areas
 
 @{
     ViewBag.Title = "Delete";
