--- a/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.user_management.Models.AreaFilters>
+﻿@model IEnumerable<EqUiWebUi.Areas.user_management.Models.c_areas>
 
 @{
     ViewBag.Title = "Index";
