--- a/EqUiWebUi/Areas/user_management/Views/users/Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/Details.cshtml
@@ -33,6 +33,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ResponsibleArea)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ResponsibleArea)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Culture)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Culture)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Locked)
         </dt>
 
@@ -46,6 +62,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Blocked)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Comment)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Comment)
         </dd>
 
     </dl>
