--- a/EqUiWebUi/Areas/user_management/Views/user/Edit.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/Edit.cshtml
@@ -9,82 +9,117 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>My user settings</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+<div class="form-horizontal">
+    <h4>My user settings</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.id)
 
-        <div class="form-group"> 
-            @*Can not be changed here*@
-            @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @*Can not be changed here*@
+        @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+            @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @*Can be changed if user not locked*@
-            @Html.LabelFor(model => model.LocationRoot, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <p>
-                    @Html.DropDownList("LocationRootPreselect", (SelectList)ViewBag.selectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
-                </p>
-                @Html.EditorFor(model => model.LocationRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LocationRoot, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @*Can be changed if user not locked*@
+        @Html.LabelFor(model => model.LocationRoot, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <p>
+                @Html.DropDownList("LocationRootPreselect", (SelectList)ViewBag.AreaSelectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
+            </p>
+            @Html.EditorFor(model => model.LocationRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.LocationRoot, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @*Can be changed if user not locked*@
-            @Html.LabelFor(model => model.AssetRoot, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <p>
-                    @MyFilters.AssetDropdownGlobal("AssetRootPreselect")
-                </p>
-                @Html.EditorFor(model => model.AssetRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AssetRoot, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @*Can be changed if user not locked*@
+        @Html.LabelFor(model => model.AssetRoot, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <p>
+                @MyFilters.AssetDropdownGlobal("AssetRootPreselect")
+            </p>
+            @Html.EditorFor(model => model.AssetRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.AssetRoot, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group"> 
-            @*Can not be changed here*@
-            @Html.LabelFor(model => model.Locked, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Locked, new { htmlAttributes = new { @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.Locked, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ResponsibleArea, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <p>
+                @Html.DropDownList("ResponsibleAreaPreselect", (SelectList)ViewBag.OwnershipSelectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select--")
+            </p>
+            @Html.EditorFor(model => model.ResponsibleArea, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ResponsibleArea, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group"> 
-            @*Can not be changed here*@
-            @Html.LabelFor(model => model.Blocked, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Blocked, new { htmlAttributes = new { @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.Blocked, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+    <div class="form-group">
+        @Html.LabelFor(model => model.Culture, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Culture, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Culture, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+
+    <div class="form-group">
+        @*Can not be changed here*@
+        @Html.LabelFor(model => model.Locked, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Locked, new { htmlAttributes = new { @disabled = "disabled" } })
+                @Html.ValidationMessageFor(model => model.Locked, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        @*Can not be changed here*@
+        @Html.LabelFor(model => model.Blocked, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Blocked, new { htmlAttributes = new { @disabled = "disabled" } })
+                @Html.ValidationMessageFor(model => model.Blocked, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 
-    <script>
+<script>
     $('#LocationRootPreselect').on('change', function () {
-            $('#LocationRoot')[0].value = this.value;
+        $('#LocationRoot')[0].value = this.value;
     });
 
     $('#AssetRootPreselect').on('change', function () {
         $('#AssetRoot')[0].value = this.value;
     });
-    </script>
+
+    $('#ResponsibleAreaPreselect').on('change', function () {
+        $('#ResponsibleArea')[0].value = this.value;
+    });
+</script>
