--- a/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
@@ -42,6 +42,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ResponsibleArea)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ResponsibleArea)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Culture)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Culture)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Locked)
         </dt>
 
@@ -55,6 +71,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Blocked)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Comment)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Comment)
         </dd>
 
     </dl>
@@ -73,7 +97,7 @@
         </dt>
 
         <dd>
-            @Html.DropDownList("LocationRoot", (SelectList)ViewBag.selectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
+            @Html.DropDownList("LocationRoot", (SelectList)ViewBag.AreaSelectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
         </dd>
 
         <p></p>
