--- a/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
@@ -13,3 +13,18 @@
         <p><a href="~/user_management/users/ListSessions" class="btn btn-primary btn-xs">List &raquo;</a></p>
     </div>
 </div>
+
+<div class="panel panel-warning">
+    <div class="panel-heading">
+        <h4 class="panel-title">Site filtering</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="panel-body">
+        <p><a href="~/user_management/AreaFilters/Index" class="btn btn-primary btn-sm">LocationFilters &raquo;</a>Beheer van location filters</p>
+    </div>
+
+    <div class="panel-body">
+        <p><a href="~/user_management/c_ownership/Index" class="btn btn-primary btn-sm">Ownership &raquo;</a>Beheer van ownership filters</p>
+    </div>
+</div>
+
