--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -91,8 +91,15 @@
         string linkText = "";
         string tooltip = "";
 
+        //no data from robot for last 2 days
+        if (Status == "ND")
+        {
+            icon = "glyphicon glyphicon-eye-open";
+            linkText = "No data";
+            tooltip = "No data from robot for 48hours check electrode by hand!";
+        }
         //no tip change deteced alert but wait to change until more than 1 mm wear
-        if (Status == "NTCD" && RobotWear < 1)
+        else if (Status == "NTCD" && RobotWear < 1)
         {
             icon = "glyphicon glyphicon-exclamation-sign";
             linkText = "Wait for rechange";
