--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -40,5 +40,11 @@
                 <a href="~/Tiplife/NgacElectrode/PlanTipChange" class="btn btn-primary btn-sm">Plan tipchange &raquo;</a>
                 (Onderhoudplannen)
             </p>
+
+            <p>
+                <a href="~/Tiplife/NgacElectrode/TipDressCycleTimeREMO" class="btn btn-primary btn-sm">DressCt &raquo;</a>
+                For Remo
+            </p>
+
         </div>
     </div>
