--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Areas.Alert.Models.h_alert>
+﻿@model IQueryable<EqUiWebUi.Areas.Alert.Models.h_alert>
 
 @{
     ViewBag.Title = "Index";
