--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -77,13 +77,23 @@
 
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h4 class="panel-title">Test area</h4>
+            <h4 class="panel-title">Asset management</h4>
             <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="panel-body">
             <p>
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetMap" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
                 Layout assets (om te zien of alles gemapt is)
+            </p>
+
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleProductionTeam" class="btn btn-primary btn-sm">ResponsibleProductionTeam &raquo;</a>
+                Layout die toont welke verantwoordelijkheid bij welk PRODUCTIE team zit.
+            </p>
+
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=ResponsibleTechnicianTeam" class="btn btn-primary btn-sm">ResponsibleTechnicianTeam &raquo;</a>
+                Layout die toont welke verantwoordelijkheid bij welk MAINT team zit.
             </p>
         </div>
     </div>
