duplicates in owenership drop down and manual asset link trigger

--- a/EqUiWebUi/Areas/user_management/Views/c_ownership/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/c_ownership/Index.cshtml
@@ -42,5 +42,6 @@
     <h4>This config is apply once every week by hangfire.</h4>
     <p>Job: AssetsMx-gadata moves the data from maximo to gadata </p>
     <p>Then [EqUi].[sp_LinkAssets] is invoked. The join for ownership happens here.</p>
+    <p><a href="~/user_management/c_ownership/LinkMaximoAssetsToGadata" class="btn btn-danger btn-sm JQresultTriggerBtn">Trigger it now &raquo;</a>(click once and wait!)</p>
 </div>
 
