--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@{
     ViewBag.Title = "VCG GA UB12 Homepage";
 }
-<div class="jumbotron">
-    <h1>WELCOME IN GA</h1>
+<div class="row">
+    <div class="col-md-8">
+        <div class="jumbotron">
+            <h1>WELCOME IN GA</h1>
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="alert alert-success">
+            <h3>VCTA 2018</h3>
+            <img src="~/Content/images/award-winning.png" />
+        </div>
+    </div>
+
 </div>
 
 <p></p>
