--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -70,6 +70,11 @@
                 Opvolging MDT MWT MTTR per zone / object
             </p>
 
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=RackTracking&sheet=RackDash" class="btn btn-primary btn-sm">RACKTRACK &raquo;</a>
+                Opvolging Pickfouten in racken (RFID)
+            </p>
+
         </div>
     </div>
 
