--- a/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
+++ b/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
@@ -1,20 +1,36 @@
 ﻿@*sbcu tool *@
 @helper SbcuTool(string gunname)
     {
+        /**/
 
-        string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&target={0}", @Uri.EscapeDataString(gunname));
-        <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
-            <i class="glyphicon glyphicon-stats"></i>
-        </a>
+        try
+        {
+            string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&target={0}", @Uri.EscapeDataString(gunname));
+            <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
+                <i class="glyphicon glyphicon-stats"></i>
+            </a>
+        }
+        catch (Exception)
+        {
+            <div>Error</div>
+        }
+
 }
 
 @helper SbcuTool(string controllername, string toolId)
     {
-
-        string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&Controller={0}&Toolid={1}", @Uri.EscapeDataString(controllername), toolId);
-        <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
-            <i class="glyphicon glyphicon-stats"></i>
-        </a>
+        /**/
+        try
+        {
+            string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&Controller={0}&Toolid={1}", @Uri.EscapeDataString(controllername), toolId);
+            <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
+                <i class="glyphicon glyphicon-stats"></i>
+            </a>
+        }
+        catch (Exception)
+        {
+            <div>Error</div>
+        }
 }
 
 
