--- a/EqUiWebUi/Views/Shared/Error.cshtml
+++ b/EqUiWebUi/Views/Shared/Error.cshtml
@@ -1,14 +1,39 @@
-﻿
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
-</head>
-<body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
-    </hgroup>
-</body>
-</html>
+﻿@{
+    ViewBag.Title = @TempData["error"];
+}
+<div class="jumbotron">
+    <h1>How did we get here?</h1>
+    <h1>@TempData["error"]</h1>
+</div>
+
+<p></p>
+
+<div class="panel panel-default">
+    <h4>ERROR</h4>
+    <div class="panel-body">
+        <p>
+            <h4> Error Description:</h4>
+
+            <div class="alert alert-warning">
+                @Model.Exception.Message.ToString() @Html.Raw(" ") @Model.ControllerName @Html.Raw(" ") @Model.ActionName
+            </div>
+
+            <div class="alert alert-info">
+                @Model.Exception
+            </div>
+        </p>
+
+        <p>
+            <button class="btn btn-primary btn-danger" onclick="goback()" type="button"><<< Back</button>
+        </p>
+    </div>
+</div>
+
+<p></p>
+
+
+<script>
+    function goback() {
+        window.history.back()
+    }
+</script>
